# reper

ddocclient/: .qmake.cache  build.bat  build.sh  ddocclient.conf.astra.example  ddocclient.conf.linux.example  ddocclient.conf.msvs.example  ddocclient.conf.win.example  ddocclient.pro  ddocclient_ext.conf  interaction.pro  kksjsonparser.pro  reper.pro
ddocclient/app/: app.pro
ddocclient/corelibs/: corelibs.pro
ddocclient/dataaccess/: config_dataaccess.h  dataaccess.pri  dataaccess.pro  kksdatabase.h  kkspgdatabase.cpp  kkspgdatabase.h  kkspgresult.cpp  kksresult.cpp  kksresult.h  pg_access.pri  pqexception.h  pqnotify.cpp  pqnotify.h
ddocclient/ddocplugins/: ddocplugins.pro
ddocclient/ddocs_ico/: ddocs_icon_set.qrc  ddocs_icon_set1.qrc  orpfileedit.xpm
ddocclient/guilibs/: guilibs.pro
ddocclient/install/: ddocclient.nsi  defines.nsh  if_admin.nsh  if_api.nsh  if_core.nsh  if_operator.nsh  if_src.nsh  install_pages.nsh  lang_strings.nsh  section_api.nsh  section_core.nsh
ddocclient/kkscore/: config_core.h  kksclient_name.h  kkscore.pri  kkscore.pro
ddocclient/kksfactory/: KKSAttributesFactory.cpp  KKSAttributesFactory.h  KKSCatEditorFactory.cpp  KKSCatEditorFactory.h  KKSConverter.cpp  KKSConverter.h  KKSDumper.cpp  KKSDumper.h  KKSEIOFactory.cpp  KKSEIOFactory.h  KKSEntityFactory.h  KKSFileLoader.cpp  KKSFileLoader.h  KKSIndFactory.cpp  KKSIndFactory.h  KKSJMonitor.cpp  KKSJMonitor.h  KKSLoader.cpp  KKSLoader.h  KKSLoader1.cpp  KKSObjEditorFactory.cpp  KKSObjEditorFactory.h  KKSPPFactory.cpp  KKSPPFactory.h  KKSPrerender.cpp  KKSPrerender.h  KKSRubricFactory.cpp  KKSRubricFactory.h  KKSStuffFactory.cpp  KKSStuffFactory.h  KKSTemplateEditorFactory.cpp  KKSTemplateEditorFactory.h  KKSViewFactory.cpp  KKSViewFactory.h  kksfactory.pri  kksfactory.pro  kksfactory_config.h
ddocclient/kksgis/: kksbadlayerhandler.h  kksgis.pri  kksgis.pro  kksgis_config.h  kksgiswidget.cpp  kksgiswidget.h  kksgiswidgetqgis.cpp  kksgiswidgetqgis.h  kksgiswidgetqgishelper.cpp  resources.qrc
ddocclient/kksgui/: KKSAValWidget.cpp  KKSAValWidget.h  KKSAttrCheckListWidget.cpp  KKSAttrCheckListWidget.h  KKSAttrHistModel.cpp  KKSAttrHistModel.h  KKSAttrHistoryProxyModel.h  KKSAttrModel.cpp  KKSAttrModel.h  KKSAttrProxyModel.h  KKSAttrRefWidget.cpp  KKSAttrRefWidget.h  KKSAttrUUIDWidget.cpp  KKSAttrUUIDWidget.h  KKSAttrValueLabel.cpp  KKSAttrValueLabel.h  KKSAttrWidget.cpp  KKSAttrWidget.h  KKSAttributesEditor.cpp  KKSAttributesEditor.h  KKSAttributesModel.cpp  KKSAttributesModel.h  KKSCatEditor.cpp  KKSCatEditor.h  KKSCategoryTemplateWidget.cpp  KKSCategoryTemplateWidget.h  KKSCharts.cpp  KKSCheckBox.cpp  KKSCheckBox.h  KKSCheckableModel.cpp  KKSCheckableModel.h  KKSColorWidget.cpp  KKSColorWidget.h  KKSComboBox.cpp  KKSComboBox.h  KKSComplexAttrWidget.cpp  KKSComplexAttrWidget.h  KKSDateEdit.cpp  KKSDateEdit.h  KKSDateTimeEdit.cpp  (+87 more)
ddocclient/kkshttpconnector/: timer_form.ui  (+11 more)
ddocserver/: install.sh  linter_pg_lin_win.txt  org.sql  user.config.example-gentoo  user.config.example-mcbc  user.config.example-win
ddocserver/internals/libfloader/src/: Makefile.am  cstring_to_text.c  exec_spi.c  floader.h  floader.pro.win  floader_config.h  hashfile.c  hist.c  kksversion.h  openfile.c  rand.c  rdeletefile.c  rgetabsurl.c  rgetfile.c  rgetfilebyurl.c  rgetfilesizebyurl.c  rgethashfile.c  rwritefile.c  rwritefile1.c  rxpm2jpeg.c  testargs.c  text_to_cstring.c  xpm2jpeg.c
io_client/: Doxyfile  build.sh  build_all.sh  corelibs.pro  ddocclient.conf.astra.example  ddocclient.conf.linux.example  ddocclient.conf.msvs.example  ddocclient.conf.win.example  ddocclient_desktop.pro  guilibs.pro  interaction.pro  io_client.conf.astra.example  io_client.conf.linux.example  io_client.conf.mcbc.example  io_client.conf.win.example  io_client.pro  io_client_desktop.pro  kksjsonparser.pro  openrpt.pro  qgis.pro  reper.pro
io_server/: install.sh
io_server/internals/libfloader/: acinclude.m4  configure.ac
io_server/internals/libfloader/build-aux/: autogen.sh
io_server/internals/libfloader/src/: Makefile.am  exec_spi.c  floader.h  floader.pro.lin  hist.c  kksversion.h  point_test.c  rgetfile.c  rgetfilebyurl.c  rwritefile.c  rxpm2jpeg.c  text_to_cstring.c  xpm2jpeg.c
(+2914 files in other folders)
